--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
     "generate": "nuxt generate",
     "preview": "nuxt preview",
     "start": "node .output/server/index.mjs",
+    "vercel-build": "prisma generate && prisma migrate deploy && nuxt build",
     "postinstall": "prisma generate",
     "db:migrate": "prisma migrate dev",
     "db:migrate:deploy": "prisma migrate deploy",
     "db:studio": "prisma studio"
   },
   "dependencies": {
+    "@libsql/client": "^0.15.15",
     "@nuxt/ui": "^2.15.0",
     "@pinia/nuxt": "^0.5.1",
     "@prisma/client": "^5.19.0",
