--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "generate": "nuxt generate",
     "preview": "nuxt preview",
     "start": "node .output/server/index.mjs",
-    "vercel-build": "prisma generate && prisma migrate deploy && nuxt build",
+    "vercel-build": "prisma generate && node scripts/migrate-turso.js && nuxt build",
     "postinstall": "prisma generate",
     "db:migrate": "prisma migrate dev",
     "db:migrate:deploy": "prisma migrate deploy",
