Api url update v2

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "generate": "nuxt generate",
     "preview": "nuxt preview",
     "start": "node .output/server/index.mjs",
-    "vercel-build": "prisma generate && node scripts/migrate-turso.js && nuxt build",
+    "vercel-build": "node scripts/vercel-build.js",
     "postinstall": "prisma generate",
     "db:migrate": "prisma migrate dev",
     "db:migrate:deploy": "prisma migrate deploy",
@@ -19,6 +19,7 @@
     "@libsql/client": "^0.15.15",
     "@nuxt/ui": "^2.15.0",
     "@pinia/nuxt": "^0.5.1",
+    "@prisma/adapter-libsql": "^6.19.0",
     "@prisma/client": "^5.19.0",
     "@types/bcrypt": "^6.0.0",
     "bcrypt": "^6.0.0",
